docs: fixed Sidebar overflow
I hate CSS so much 😭

--- a/docs/src/app/globals.css
+++ b/docs/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --navbar-height: 4rem;
+  }
+}
+
 html,
 body {
   @apply m-0 flex h-full w-full p-0;
